--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:name=".App"
@@ -20,18 +21,16 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".ui.avtarization"
+            android:name=".ui.avtarization.avtarization"
             android:exported="true"
             android:label="@string/title_activity_avtarization"
             android:theme="@style/Theme.Wallet">
-
         </activity>
         <activity
             android:theme="@style/Theme.Wallet"
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
-
 
         </activity>
         <activity
@@ -40,13 +39,13 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
     </application>
 
 </manifest>
